k8s/product-service/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: product-service
  labels:
    name: product-service
    environment: production
    managed-by: argocd
